# shootingstr

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
meson/: meson.build
meson/subprojects/: libwebsockets.wrap  libwebsockets.wrap.bak  openssl-cmake.wrap
src/: main.c
src/nostr/: nostr.c  nostr.h  nostr_callback_close.c  nostr_callback_event.c  nostr_callback_req.c  nostr_callback_unknown.c  nostr_json_wrapper.h  nostr_storage.c  nostr_storage.h  nostr_types.h  nostr_utils.c  nostr_utils.h  nostr_validator.c  nostr_validator.h
src/utils/: compatibility.h  log.h
src/websockets/: websockets.c  websockets.h
